2005-02-15 Alain Magloire
	Fix PR 82856
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchAnnotationModel.java
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchDocumentProvider.java
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchFile.java
	* src/org/eclipse/cdt/internal/ui/preferences/CSearchPreferencePage.java

2005-02-14 Alain Magloire
	Fix from Javier Kohen PR 69157
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties

2005-02-14 Alain Magloire
	Fix for PR 84640, do the folding at the start of the ID
	so code like this
	 static int
	 foo () {
	 }
	will start the folding on "foo" and not on "static int"
	* src/org/eclipse/cdt/internal/ui/text/folding/DefaultCFoldingStructureProvider.java

2005-02-10 Bogdan Gheorghe
	Fix for 75916: Errors and exceptions in log if you try create a C++ project with 
	same name/different case.
	Refactored CUIPlugin.errorDialog to take a boolean logError.
	
	* src/org/eclipse/cdt/ui/CUIPlugin.java
	* src/org/eclipse/cdt/ui/dialogs/TabFolderOptionBlock.java
	* src/org/eclipse/cdt/ui/wizards/NewCProjectWizard.java
	
2005-02-09 Alain Magloire
	PR 84841: Description of the template in the hover was incorrect.
	* src/org/eclipse/cdt/internal/ui/text/TemplateEngine.java

2005-02-06 Alain Magloire
	PR 84423, Patch from :  Tomaszewski Przemek
	Added keybinding next/previous(CTRL-SHIFT-UP/DOWN) to from
	member to member in the CEditor(PR 84423).

	* NEWS
	* plugin.properties
	* plugin.xml
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CSourceViewer.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefinitionIds.java
	
2005-02-02 Bogdan Gheorghe
	Added a delete IProblem Markers action to context menu to allow users to manually
	remove problems reported by the parser during an index.
	